# backend-deploy

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: permissions.py  settings.py  urls.py
momentoespecial/: adicionarCarrinho.py  admin.py  apps.py  buscarPesquisa.py  buscarProdutos.py  puxarCarrinho.py  removerCarrinho.py
momentoespecial/migrations/: 0001_initial.py  0002_compra.py  0003_itenscompra.py  0004_favoritos.py  0005_produto_datafinal_produto_datainicio.py
momentoespecial/models/: __init__.py  categorias.py  compra.py  favoritos.py  produto.py  tamanho.py
momentoespecial/serializers/: __init__.py  categorias.py  compra.py  favoritos.py  produtos.py  tamanho.py
momentoespecial/views/: __init__.py  categoria.py  compra.py  favoritos.py  produto.py  produtosCategoria.py  tamanho.py
uploader/migrations/: 0001_initial.py
usuario/: cadastro.py  views.py
usuario/migrations/: 0001_initial.py
